--- a/CustomTableViewCell/Base.lproj/Main.storyboard
+++ b/CustomTableViewCell/Base.lproj/Main.storyboard
@@ -1,24 +1,128 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="PSf-fP-YZd">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Custom Table View Controller-->
+        <scene sceneID="0X8-qz-0tf">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                <tableViewController id="PSf-fP-YZd" customClass="CustomTableViewController" customModule="CustomTableViewCell" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="e44-Ap-u9M">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CustomTableViewCell" rowHeight="240" id="cza-aY-tXn" customClass="CustomTableViewCell" customModule="CustomTableViewCell" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="50" width="393" height="240"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="cza-aY-tXn" id="bbV-wb-5Oe">
+                                    <rect key="frame" x="0.0" y="0.0" width="393" height="240"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fqs-mp-YCp">
+                                            <rect key="frame" x="20" y="11" width="353" height="218"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pin.slash.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="PR8-fh-v7J">
+                                                    <rect key="frame" x="8" y="88.666666666666657" width="40" height="41.333333333333343"/>
+                                                    <color key="backgroundColor" systemColor="systemGreenColor"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="40" id="6WQ-yV-1fc"/>
+                                                        <constraint firstAttribute="width" constant="40" id="t0h-C1-dNG"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="k90-2v-rcn">
+                                                    <rect key="frame" x="301" y="87" width="44" height="44"/>
+                                                    <color key="backgroundColor" systemColor="systemPurpleColor"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="44" id="oTD-z4-inR"/>
+                                                        <constraint firstAttribute="height" constant="44" id="rEV-F3-Pnb"/>
+                                                    </constraints>
+                                                    <state key="normal" title="Button"/>
+                                                    <buttonConfiguration key="configuration" style="plain" image="trash" catalog="system"/>
+                                                </button>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="Z16-pf-ccN">
+                                                    <rect key="frame" x="56" y="8" width="237" height="202"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lD8-1p-5TR">
+                                                            <rect key="frame" x="0.0" y="0.0" width="237" height="101"/>
+                                                            <color key="backgroundColor" systemColor="systemBrownColor"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3BB-kt-pXa">
+                                                            <rect key="frame" x="0.0" y="101" width="237" height="101"/>
+                                                            <color key="backgroundColor" systemColor="systemPinkColor"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                </stackView>
+                                            </subviews>
+                                            <color key="backgroundColor" systemColor="systemYellowColor"/>
+                                            <constraints>
+                                                <constraint firstItem="PR8-fh-v7J" firstAttribute="leading" secondItem="fqs-mp-YCp" secondAttribute="leading" constant="8" id="7hW-UV-K0M"/>
+                                                <constraint firstItem="k90-2v-rcn" firstAttribute="leading" secondItem="Z16-pf-ccN" secondAttribute="trailing" constant="8" id="AdU-mY-wCg"/>
+                                                <constraint firstItem="PR8-fh-v7J" firstAttribute="centerY" secondItem="fqs-mp-YCp" secondAttribute="centerY" id="JTa-fG-5k4"/>
+                                                <constraint firstItem="k90-2v-rcn" firstAttribute="centerY" secondItem="fqs-mp-YCp" secondAttribute="centerY" id="ciZ-Ba-Gzo"/>
+                                                <constraint firstAttribute="trailing" secondItem="k90-2v-rcn" secondAttribute="trailing" constant="8" id="e7F-jj-TPa"/>
+                                                <constraint firstItem="Z16-pf-ccN" firstAttribute="leading" secondItem="PR8-fh-v7J" secondAttribute="trailing" constant="8" id="iry-Nf-9dI"/>
+                                                <constraint firstAttribute="bottom" secondItem="Z16-pf-ccN" secondAttribute="bottom" constant="8" id="k10-hi-5kl"/>
+                                                <constraint firstItem="Z16-pf-ccN" firstAttribute="top" secondItem="fqs-mp-YCp" secondAttribute="top" constant="8" id="vAR-el-1Ug"/>
+                                            </constraints>
+                                        </view>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="bottomMargin" secondItem="fqs-mp-YCp" secondAttribute="bottom" id="Ac3-yz-Y8w"/>
+                                        <constraint firstItem="fqs-mp-YCp" firstAttribute="top" secondItem="bbV-wb-5Oe" secondAttribute="topMargin" id="K3U-Zx-3d9"/>
+                                        <constraint firstItem="fqs-mp-YCp" firstAttribute="trailing" secondItem="bbV-wb-5Oe" secondAttribute="trailingMargin" id="jiX-lu-q0k"/>
+                                        <constraint firstItem="fqs-mp-YCp" firstAttribute="leading" secondItem="bbV-wb-5Oe" secondAttribute="leadingMargin" id="niq-TS-Or1"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="checkImageView" destination="PR8-fh-v7J" id="Wzc-Hn-oL1"/>
+                                    <outlet property="pinnedButton" destination="k90-2v-rcn" id="SIb-ru-3Le"/>
+                                    <outlet property="restaurantLabel" destination="lD8-1p-5TR" id="ObT-YO-Wto"/>
+                                    <outlet property="starRatingLabel" destination="3BB-kt-pXa" id="IXq-dH-8wX"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="PSf-fP-YZd" id="6Al-K1-ecn"/>
+                            <outlet property="delegate" destination="PSf-fP-YZd" id="5Fj-nE-USO"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="OKb-jV-f6P" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1116.793893129771" y="36.619718309859159"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="pin.slash.fill" catalog="system" width="118" height="128"/>
+        <image name="trash" catalog="system" width="117" height="128"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemBrownColor">
+            <color red="0.63529411764705879" green="0.51764705882352946" blue="0.36862745098039218" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemPinkColor">
+            <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemPurpleColor">
+            <color red="0.68627450980392157" green="0.32156862745098042" blue="0.87058823529411766" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemYellowColor">
+            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
